--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "goit-for-team-4-project",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://Shlov.github.io/goit-for-team-4-project",
+  "homepage": "https://AninotA.github.io/copytry",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-for-team-4-project/"
+    "build": "parcel build src/*.html --public-url /copytry/"
   },
   "repository": {
     "type": "git",
